Regression: Crash when attempting to emulate with new paint.hide_show operator #116024

Closed
opened 2023-12-11 10:16:34 +01:00 by Pratik Borhade · 1 comment
Member

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01

Blender Version
Broken: 4.1
Worked: 4.0

Short description of error
When VisArea and VisAction properties of paint.hide_show is set to masked and hide respectively, it triggers crash after calling Alt H

Exact steps for others to reproduce the error

  • Edit > Preferences, search Hide/Show sculpt mode operator, set VisArea=masked, VisAction=hide : image
  • Open default sculpting file
  • Paint some face sets
  • Press Alt + H

Originally reported by Michael Campbell in #116024

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.01 **Blender Version** Broken: 4.1 Worked: 4.0 **Short description of error** When VisArea and VisAction properties of paint.hide_show is set to masked and hide respectively, it triggers crash after calling `Alt H` **Exact steps for others to reproduce the error** - `Edit > Preferences`, search Hide/Show sculpt mode operator, set VisArea=masked, VisAction=hide : [image](/attachments/7237f4ed-9905-4e28-87df-0eeed2d2d809) - Open default sculpting file - Paint some face sets - Press Alt + H Originally reported by Michael Campbell in #116024
Pratik Borhade added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-12-11 10:16:34 +01:00
Author
Member

This should fix the crash

diff --git a/source/blender/editors/sculpt_paint/paint_hide.cc b/source/blender/editors/sculpt_paint/paint_hide.cc
index 74ac58d386f..4e7679a0e6b 100644
--- a/source/blender/editors/sculpt_paint/paint_hide.cc
+++ b/source/blender/editors/sculpt_paint/paint_hide.cc
@@ -261,6 +261,9 @@ static void partialvis_update_mesh(Object &object,
         mesh_show_all(object, nodes);
       }
       else {
+        if (mask.is_empty()) {
+          break;
+        }
         vert_hide_update(object, nodes, [&](const Span<int> verts, MutableSpan<bool> hide) {
           for (const int i : verts.index_range()) {
             if (mask[verts[i]] > 0.5f) {
This should fix the crash ```Diff diff --git a/source/blender/editors/sculpt_paint/paint_hide.cc b/source/blender/editors/sculpt_paint/paint_hide.cc index 74ac58d386f..4e7679a0e6b 100644 --- a/source/blender/editors/sculpt_paint/paint_hide.cc +++ b/source/blender/editors/sculpt_paint/paint_hide.cc @@ -261,6 +261,9 @@ static void partialvis_update_mesh(Object &object, mesh_show_all(object, nodes); } else { + if (mask.is_empty()) { + break; + } vert_hide_update(object, nodes, [&](const Span<int> verts, MutableSpan<bool> hide) { for (const int i : verts.index_range()) { if (mask[verts[i]] > 0.5f) { ```
Pratik Borhade self-assigned this 2023-12-11 10:50:22 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-12 12:33:52 +01:00
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-12-12 14:45:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116024
No description provided.