Fix #116024: Face set unhide crash for masked type

This is due to accessing value from empty mask attribute array.

Pull Request: https://projects.blender.org/blender/blender/pulls/116028